k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udemy-python-app
  labels:
    app: udemy-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udemy-python-app
  template:
    metadata:
      labels:
        app: udemy-python-app
    spec:
      containers:
      - name: udemy-python-app
        image: sevenleo/udemy-python-app:v1
        ports:
        - containerPort: 5000
